todo-project/kustomize/base/todo-backend-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-backend-postgres-stset
spec:
  serviceName: todo-backend-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: todo-backend-postgres-data-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
  volumeClaimTemplates:
    - metadata:
        name: todo-backend-postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
