todo-project/kustomize/base/todo-broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-broadcaster-deployment
  namespace: project
spec:
  replicas: 6
  selector:
    matchLabels:
      app: todo-broadcaster
  template:
    metadata:
      labels:
        app: todo-broadcaster
    spec:
      containers:
        - name: todo-broadcaster
          image: todo-broadcaster
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
