todo-project/kustomize/base/todo-backend-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-postgres-svc
  namespace: project
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: postgresapp
  type: ClusterIP
